--- a/landing.css
+++ b/landing.css
@@ -1,11 +1,29 @@
 
-header#header{
+body,html{
+	/*font-family: 'Esteban', serif;*/
+	font-family: 'Ledger', serif;
+	margin: 0px;
+	padding:0px;
+	height: 100%;
+}
+
+body,html,header{
+	width: 100%;
+}
+
+
+header#header,div#div-color{
 	margin: 0px auto;
-	height: 50px;
-	width:1000px;
-	font-family:'Georgia',Garamond;
-	background: #fff;
-	
+}
+
+header#header{
+	height: 12%;
+}
+
+div#div-color{
+	font-size: 15px;
+	height: 6%;
+	width: 40%;
 }
 
 .main{
@@ -13,43 +31,87 @@ header#header{
 	position: relative;
 }
 
+
+button#promo-button{
+	position: absolute;
+	margin-top: -280px;
+	margin-left:185px;
+	width: 250px;
+	font-weight: 600;
+	font-size: 18.5px;
+	border-radius: 20px;
+}
+
+
+
 span a#logo{
 	float: left;
 	outline: none;
 	text-decoration:none;
 	cursor: pointer;
-	width: 300px;
-	height: 50px;
-	margin-top:24px;
-	color: #000;
+	margin-left: 185px;
+	width:17%;
 }
 
-div#header-color{
-	float: right;
-	position: absolute;
+nav#header-color,nav#div-nav{
 	top: 0;
 	right: 0;
-	margin-right:-130px;
 }
 
-#header-color ul li{
-	/*float: right;*/
+nav#div-nav{
+	width: 100%;
+	height: 95%;
+}
+
+nav#header-color{
+	width: 21.5%;
+	float: right;
+	margin-top: 25px;
+}
+
+nav#header-color ul li a img{
+	height: 25px;
+	width:25px;
+}
+
+ul li{
 	display:list-item;
 	outline: none;
 	margin-left:0px;
 	text-decoration: none;
 	cursor: pointer;
-	padding-top:10px;
 }
 
 ul#social-color{
 	list-style:none;
 	display: inline;
 	margin: 0px;
-	
 }
 
-.nav-pills li{
-	background-color:transparent;
-	margin-left:25px;
+ul#social-color li a:hover{
+	zoom: 1.5;
+}
+
+div#bike-pic{
+	height: 80%;
+	width: 100%;
+	background: url("bike.png") no-repeat;
+	margin-bottom: 7px;
+}
+
+
+
+#div-color ul li a img{
+	height: 35px;
+	width: 35px;
+	margin-right: 30px;
+}
+
+#div-color ul li a:hover{
+	background: #fff;
+}
+
+.nav-pills li a{
+	padding:0px 4px;
+	margin-right:3px;
 }
