--- a/templates/landing.html
+++ b/templates/landing.html
@@ -2,15 +2,12 @@
 <html lang="en">
 	<head>
 		<title>Aquahold</title>
-		
-		<!--link href='http://fonts.googleapis.com/css?family=Esteban' rel='stylesheet' type='text/css'-->
 		<link href='http://fonts.googleapis.com/css?family=Ledger' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css" />
 		<link type="text/css" rel="stylesheet" href="../css/landing.css" />
 		<link type="text/css" rel="stylesheet" href="../css/homeview.css" />
 		<link type="text/css" rel="stylesheet" href="../css/homeview.css" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 
 	</head>
 	
@@ -83,7 +80,9 @@
 		<div id="div-color">
 			<nav id="div-nav">
 				<ul class="nav nav-pills" id="partner-color">
-	         		<li style="margin-top:9px;margin-right:30px;" >In partnership with:  </li>
+	         		<li class="no-link-text" style="margin-right:30px;">
+	         			In partnership with:  
+	         		</li>
 	         		<li><a href="" target="_blank" class="social">
 						<img src="../img/letourdefrance.gif" />
 					</a></li>
@@ -91,9 +90,9 @@
 						<img src="../img/evian.jpg" />
 					</a></li>
 					<li><a href="" class="social" target="_blank">
-							<img src="../img/pinarello.jpg" style="margin-right:0px;width:95px;height:25px;"/>
+							<img src="../img/pinarello.jpg" style="margin-right:0px; width:95px; height:25px;"/>
 					</a></li> 
-					<li style="margin-top:9px;margin-left:30px;" >&copy 2013</li>
+					<li class="no-link-text" style="margin-left:30px;" >&copy 2013</li>
 	            </ul>
 			</nav>
 		</div>
