--- a/css/landing.css
+++ b/css/landing.css
@@ -1,9 +1,10 @@
 
 body,html{
 	/*font-family: 'Esteban', serif;*/
-	font-family: 'Ledger', serif;
-	margin: 0px;
-	padding:0px;
+	/*font-family: 'Ledger', serif;*/
+	font-family: 'Georgia',serif;
+	margin: 0em;
+	padding:0em;
 	height: 100%;
 }
 
@@ -12,58 +13,62 @@ body,html,header{
 }
 
 
-
 li.no-link-text{
-	margin-top: 9px;
+	margin-top: 2%;
 	cursor: auto;
 }
 
-header#header,div#div-color{
-	margin: 0px auto;
+header#header,footer#footer,.main{
+	margin: 0em auto;
 }
 
 header#header{
 	height: 12%;
+	top: 0;
+
 }
 
-div#div-color{
-	font-size: 15px;
+footer#footer{
 	height: 6%;
 	width: 40%;
 }
 
-.main{
-	margin:0px auto;
+/*.main{
 	position: relative;
-}
+}*/
 
-
-a#promo-button{
-	position: absolute;
-	margin-top: -280px;
-	margin-left:174px;
-	width: 250px;
-	font-weight: 600;
-	font-size: 18.5px;
-	border-radius: 20px;
-}
-
-button,a#promo-button{
-	font-family: 'Ledger', serif;
-}
-
-input.input-large{
-	font-size: 15px;
+footer#footer,input.input-large{
+	font-size: 1em;
 	font-weight: 400;
 }
 
+a#promo-button{
+	margin-top: 17%;
+	margin-left:13.5%;
+	font-weight: 600;
+	font-size: 140%;
+	border-radius: 4em;
+}
+
+button#modal-button{
+	font-size: 1.5em;
+}
+
+button,a#promo-button{
+	font-family: 'Georgia', serif;
+}
+
+div.modal-body{
+	padding: 0em;
+	padding-top: 1.4em;
+}
 
 span a#logo{
 	float: left;
 	outline: none;
 	text-decoration:none;
 	cursor: pointer;
-	margin-left: 215px;
+	margin-left: 15%;
 	width:17%;
 }
 
@@ -84,14 +89,14 @@ nav#header-color{
 }
 
 nav#header-color ul li a img{
-	height: 25px;
-	width:25px;
+	height: 2em;
+	width:2em;
 }
 
 ul li{
 	display:list-item;
 	outline: none;
-	margin-left:0px;
+	margin-left:0em;
 	text-decoration: none;
 	cursor: pointer;
 }
@@ -99,7 +104,7 @@ ul li{
 ul#social-color,ul#partner-color{
 	list-style:none;
 	display: inline;
-	margin: 0px;
+	margin: 0em;
 }
 
 ul#social-color li a:hover{
@@ -107,25 +112,23 @@ ul#social-color li a:hover{
 }
 
 div#bike-pic{
-	height: 80%;
+	height: 78%;
 	width: 100%;
 	background: url("../img/bike.png") no-repeat;
-	margin-bottom: 7px;
+	margin-bottom: 1em;
+	overflow: hidden;
 }
 
-
-
-#div-color ul li a img{
-	height: 35px;
-	width: 35px;
-	margin-right: 30px;
+#footer ul li a img{
+	height: 2em;
+	width: 3em;
+	margin-right: 2em;
 }
 
-#div-color ul li a:hover{
+#footer ul li a:hover{
 	background: #fff;
 }
 
 .nav-pills li a{
-	padding:0px 4px;
-	margin-right:3px;
+	padding:0em 0.4em;
 }
