--- a/templates/landing.html
+++ b/templates/landing.html
@@ -2,21 +2,18 @@
 <html lang="en">
 	<head>
 		<title>Aquahold</title>
-		<link href='http://fonts.googleapis.com/css?family=Ledger' rel='stylesheet' type='text/css'>
+		<!--link href='http://fonts.googleapis.com/css?family=Ledger' rel='stylesheet' type='text/css'-->
 		<link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css" />
 		<link type="text/css" rel="stylesheet" href="../css/landing.css" />
-		<link type="text/css" rel="stylesheet" href="../css/homeview.css" />
-		<link type="text/css" rel="stylesheet" href="../css/homeview.css" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	</head>
 	
 	<body>
-		
 		<header id="header" class="main">
-			 <span>
-	         	<a id="logo" href="/" rel="#default"><img src="../img/logo.png"></a>
-	         </span>
+			<span>
+		   		<a id="logo" href="/" rel="#default"><img src="../img/logo.png"></a>
+		    </span>
 	        <nav id="header-color">
 	         	<ul class="nav nav-pills" id="social-color">
 	         		<li></li>
@@ -41,46 +38,45 @@
 	            </ul>
 	          </nav>
 		</header>
-
-		<div id="bike-pic">
-		</div>
-
-		<a href="#myModal" role="button" class="btn btn-large btn-info" id="promo-button" data-toggle="modal">Sign up for a free bottle!
-		</a>
 		
-
+		<div id="bike-pic">
+			<a href="#myModal" role="button" class="btn btn-large btn-info" id="promo-button" data-toggle="modal"> Sign up for a free bottle!
+			</a>
+		</div>
+		
 		<!-- Modal -->
 		<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  		<div class="modal-header">
-    		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-    		<h3 id="myModalLabel">Your info here</h3>
-  		</div>
-  		<div class="modal-body">
-    		<form class="form-horizontal">
-    			<div class="control-group">
-    				<label class="control-label" for="inputName">Name</label>
-    				<div class="controls">
-      					<input class="input-large"  type="text" id="inputName" placeholder="First Name">
-    				</div>
-  				</div>
-  				<div class="control-group">
-    				<label class="control-label" for="inputEmail">Email</label>
-    				<div class="controls">
-      					<input class="input-large" type="text" id="inputEmail" placeholder="Email Address">
-   					</div>
-   				</div>
-			</form>
-  		</div>
-  		<div class="modal-footer">
-    		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    		<button class="btn btn-info" >Submit</button>
-  		</div>
+	  		<div class="modal-header">
+	    		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+	    		<h3 id="myModalLabel">Your info here</h3>
+	  		</div>
+	  		<div class="modal-body">
+	    		<form class="form-horizontal">
+	    			<div class="control-group">
+	    				<label class="control-label" for="inputName">Name</label>
+	    				<div class="controls">
+	      					<input class="input-large"  type="text" id="inputName" placeholder="First Name">
+	    				</div>
+	  				</div>
+	  				<div class="control-group">
+	    				<label class="control-label" for="inputEmail">Email</label>
+	    				<div class="controls">
+	      					<input class="input-large" type="email" id="inputEmail" placeholder="Email Address">
+	   					</div>
+	   				</div>
+				</form>
+	  		</div>
+	  		<div class="modal-footer">
+	    		<!--button class="btn" data-dismiss="modal" aria-hidden="true">Close</button-->
+	    		<button class="btn btn-info" id="modal-button">Submit</button>
+	  		</div>
 		</div>
-		
-		<div id="div-color">
+
+		<!--footer-->
+		<footer id="footer">
 			<nav id="div-nav">
 				<ul class="nav nav-pills" id="partner-color">
-	         		<li class="no-link-text" style="margin-right:30px;">
+	         		<li class="no-link-text" style="margin-right:5%;">
 	         			In partnership with:  
 	         		</li>
 	         		<li><a href="" target="_blank" class="social">
@@ -95,10 +91,11 @@
 					<li class="no-link-text" style="margin-left:30px;" >&copy 2013</li>
 	            </ul>
 			</nav>
-		</div>
+		</footer>
 	</body>
 
 
-		<script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
-		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+	<!--script type="text/javascript" src="http://code.jquery.com/jquery.js"></script-->
+	<script src="../js/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 </html>
